--- a/.github/workflows/sonarr.yaml
+++ b/.github/workflows/sonarr.yaml
@@ -71,7 +71,7 @@ jobs:
           ${{ runner.os }}-buildx-
 
     - name: Build and Push
-      if: github.ref != 'refs/heads/main'
+      if: github.event.number != ''
       uses: docker/build-push-action@v2
       with:
         build-args: VERSION=${{ steps.prep.outputs.version }}
@@ -85,7 +85,7 @@ jobs:
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: Build local single-platform for testing
-      if: github.ref != 'refs/heads/main'
+      if: github.event.number != ''
       uses: docker/build-push-action@v2
       with:
         build-args: VERSION=${{ steps.prep.outputs.version }}
@@ -98,7 +98,7 @@ jobs:
         cache-to: type=local,dest=/tmp/.buildx-cache
 
     - name: Test image
-      if: github.ref != 'refs/heads/main'
+      if: github.event.number != ''
       env:
         GOSS_FILE: ${{ github.workflow }}/goss.yaml
       run: |
