--- a/.github/workflows/sonarr.yaml
+++ b/.github/workflows/sonarr.yaml
@@ -51,6 +51,7 @@ jobs:
         driver-opts: image=moby/buildkit:master
 
     - name: Login to GitHub Container Registry
+      if: github.event_name != 'pull_request'
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
@@ -78,7 +79,7 @@ jobs:
         context: .
         file: ./${{ github.workflow }}/Dockerfile
         platforms: linux/amd64,linux/arm64
-        push: true
+        push: false # GitHub secrets not available in PRs
         tags: |
           ghcr.io/${{ github.repository_owner }}/pull-request:${{github.event.number}}
         cache-from: type=local,src=/tmp/.buildx-cache
