--- a/.github/workflows/zenbot.yaml
+++ b/.github/workflows/zenbot.yaml
@@ -48,6 +48,7 @@ jobs:
         driver-opts: image=moby/buildkit:master
 
     - name: Login to GitHub Container Registry
+      if: github.event_name != 'pull_request'
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
@@ -62,7 +63,7 @@ jobs:
         context: .
         file: ./${{ github.workflow }}/Dockerfile
         platforms: linux/amd64,linux/arm64
-        push: true
+        push: false # GitHub secrets not available in PRs
         tags: |
           ghcr.io/${{ github.repository_owner }}/pull-request:${{github.event.number}}
 
