--- a/.github/workflows/cert-manager-dnsmadeeasy.yaml
+++ b/.github/workflows/cert-manager-dnsmadeeasy.yaml
@@ -61,7 +61,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         build-args: VERSION=${{ steps.prep.outputs.version }}
-        context: .
+        context: ${{ github.workflow }}
         file: ./${{ github.workflow }}/Dockerfile
         platforms: linux/amd64,linux/arm64
         push: false # GitHub secrets not available in PRs
@@ -73,7 +73,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         build-args: VERSION=${{ steps.prep.outputs.version }}
-        context: .
+        context: ${{ github.workflow }}
         file: ./${{ github.workflow }}/Dockerfile
         platforms: linux/amd64,linux/arm64
         push: true
