--- a/.github/workflows/cert-manager-dnsmadeeasy.yaml
+++ b/.github/workflows/cert-manager-dnsmadeeasy.yaml
@@ -17,6 +17,8 @@ on:
     types:
     - opened
     - reopened
+  schedule:
+  - cron: "0 0 * * 6"
 
 env:
   REGISTRY_IMAGE: ${{ github.workflow }}
@@ -63,7 +65,7 @@ jobs:
         build-args: VERSION=${{ steps.prep.outputs.version }}
         context: ${{ github.workflow }}
         file: ./${{ github.workflow }}/Dockerfile
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64,linux/arm64,linux/arm/v7
         push: false # GitHub secrets not available in PRs
         tags: |
           ghcr.io/${{ github.repository_owner }}/pull-request:${{github.event.number}}
@@ -75,8 +77,8 @@ jobs:
         build-args: VERSION=${{ steps.prep.outputs.version }}
         context: ${{ github.workflow }}
         file: ./${{ github.workflow }}/Dockerfile
-        platforms: linux/amd64,linux/arm64
-        push: true
+        platforms: linux/amd64,linux/arm64,linux/arm/v7
+        push: github.event_name != 'schedule'
         tags: |
           ghcr.io/${{ github.repository_owner }}/${{ env.REGISTRY_IMAGE }}:latest
           ghcr.io/${{ github.repository_owner }}/${{ env.REGISTRY_IMAGE }}:v${{ steps.prep.outputs.version }}
