--- a/.github/workflows/cert-manager-dnsmadeeasy.yaml
+++ b/.github/workflows/cert-manager-dnsmadeeasy.yaml
@@ -78,7 +78,7 @@ jobs:
         context: ${{ github.workflow }}
         file: ./${{ github.workflow }}/Dockerfile
         platforms: linux/amd64,linux/arm64,linux/arm/v7
-        push: github.event_name != 'schedule'
+        push: "${{ github.event_name != 'schedule' }}"
         tags: |
           ghcr.io/${{ github.repository_owner }}/${{ env.REGISTRY_IMAGE }}:latest
           ghcr.io/${{ github.repository_owner }}/${{ env.REGISTRY_IMAGE }}:v${{ steps.prep.outputs.version }}
