--- a/.github/workflows/cert-manager-dnsmadeeasy.yaml
+++ b/.github/workflows/cert-manager-dnsmadeeasy.yaml
@@ -65,7 +65,7 @@ jobs:
         build-args: VERSION=${{ steps.prep.outputs.version }}
         context: ${{ github.workflow }}
         file: ./${{ github.workflow }}/Dockerfile
-        platforms: linux/amd64,linux/arm64,linux/arm/v7
+        platforms: linux/amd64,linux/arm64
         push: false # GitHub secrets not available in PRs
         tags: |
           ghcr.io/${{ github.repository_owner }}/pull-request:${{github.event.number}}
@@ -77,7 +77,7 @@ jobs:
         build-args: VERSION=${{ steps.prep.outputs.version }}
         context: ${{ github.workflow }}
         file: ./${{ github.workflow }}/Dockerfile
-        platforms: linux/amd64,linux/arm64,linux/arm/v7
+        platforms: linux/amd64,linux/arm64
         push: ${{ github.event_name != 'schedule' }}
         tags: |
           ghcr.io/${{ github.repository_owner }}/${{ env.REGISTRY_IMAGE }}:latest
