--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -94,8 +94,8 @@ jobs:
       with:
         build-args: VERSION=${{ steps.prep.outputs.version }}
         context: .
+        platforms: linux/amd64,linux/arm64
         file: ./${{ matrix.container }}/Dockerfile
-        platforms: linux/amd64
         push: false # GitHub secrets not available in PRs
         tags: |
           ghcr.io/${{ github.repository_owner }}/pull-request:${{github.event.number}}
@@ -128,8 +128,8 @@ jobs:
       with:
         build-args: VERSION=${{ steps.prep.outputs.version }}
         context: .
+        platforms: linux/amd64,linux/arm64
         file: ./${{ matrix.container }}/Dockerfile
-        platforms: linux/amd64
         push: true
         tags: |
           ghcr.io/${{ github.repository_owner }}/${{ matrix.container }}:latest
