--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,7 @@ jobs:
     needs: [detect_changes]
     strategy:
       matrix: ${{fromJson(needs.detect_changes.outputs.matrix)}}
-      fail-fast: true
+      fail-fast: false
     if: "!contains(github.event.head_commit.message, '[ci-skip]')"
     steps:
     - name: Checkout
