--- a/.github/workflows/apps.yaml
+++ b/.github/workflows/apps.yaml
@@ -129,7 +129,7 @@ jobs:
       if: ${{ steps.prep.outputs.goss == 'true' }}
       run: |
         rm -rf /tmp/.buildx-cache
-        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+        mv /tmp/.buildx-cache-new /tmp/.buildx-cache | exit 0
 
 
     # Run GOSS tests if included with the container
