--- a/.github/workflows/apps.yaml
+++ b/.github/workflows/apps.yaml
@@ -68,7 +68,7 @@ jobs:
     name: Build
     runs-on: ubuntu-20.04
     needs:
-    # - lint
+    - hadolint
     - changes
     strategy:
       matrix: ${{ fromJson(needs.changes.outputs.matrix) }}
