--- a/.github/workflows/base.yaml
+++ b/.github/workflows/base.yaml
@@ -47,6 +47,7 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         reporter: github-pr-review
+        filter_mode: diff_context
         fail_on_error: true
 
   build:
