--- a/.github/workflows/apps.yaml
+++ b/.github/workflows/apps.yaml
@@ -51,6 +51,7 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         reporter: github-pr-review
+        filter_mode: diff_context
         fail_on_error: true
 
   build:
