--- a/apps/emby/goss.yaml
+++ b/apps/emby/goss.yaml
@@ -1,14 +1,4 @@
 ---
 process:
-  emby:
+  EmbyServer:
     running: true
-
-port:
-  tcp6:8096:
-    listening: true
-
-http:
-  http://localhost:8096/web:
-    status: 200
-    body:
-      - '<title>Emby</title>'
